force-app/main/default/objects/PLM_Edition__c/PLM_Edition__c.object-meta.xml
<CustomObject>
    <label>Edition</label>
    <nameField>
        <displayFormat>ED-{0000000}</displayFormat>
        <label>Edition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Editions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>