force-app/main/default/objects/PLM_Edition__c/fields/Edition_Number__c.field-meta.xml
<CustomField>
    <fullName>Edition_Number__c</fullName>
    <formula>Proposal__r.Edition_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edition Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>