force-app/main/default/objects/PLM_Edition__c/fields/Editor_Code__c.field-meta.xml
<CustomField>
    <fullName>Editor_Code__c</fullName>
    <formula>Proposal__r.Editor_Code__c</formula>
    <label>Editor Code</label>
    <type>Text</type>
</CustomField>