force-app/main/default/objects/PLM_Edition__c/fields/Global_Subject_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Global_Subject_Category_Description__c</fullName>
    <formula>TEXT(Proposal__r.Global_Subject_Category_Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Subject Category Description</label>
    <type>Text</type>
</CustomField>