force-app/main/default/objects/PLM_Edition__c/fields/Product_Family_Short_Title__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Short_Title__c</fullName>
    <formula>Proposal__r.Product_Family_Short_Title__c</formula>
    <label>Product Family Short Title</label>
    <type>Text</type>
</CustomField>