force-app/main/default/objects/PLM_Edition__c/fields/Product_Group_Origin_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Origin_Description__c</fullName>
    <formula>TEXT( Proposal__r.Product_Group_Origin_Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group (Origin) Description</label>
    <type>Text</type>
</CustomField>