force-app/main/default/objects/PLM_Edition__c/fields/Secondary_Market_Category__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Market_Category__c</fullName>
    <formula>TEXT(Proposal__r.Secondary_Market_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Market Category</label>
    <type>Text</type>
</CustomField>